--- a/main.html
+++ b/main.html
@@ -9,6 +9,58 @@
 </head>
 <body>
     <!-- add table here -->
+	<table>
+		<tr>
+	<thead>
+		<th>Name</th>
+		<th>Kill</th>
+		<th>Saved</th>
+		<th>Deaths</th>
+		<th>Revives</th>
+		<th>Win</th>
+	</thead>
+		</tr>
+		<tr>
+		<tbody>
+			<td>Hackerman</td>
+			<td>10</td>
+			<td>0</td>
+			<td>1</td>
+			<td>0</td>
+			<td>0</td>
+		</tbody>
+		</tr>
+		<tr>
+		<tbody>
+				<td>Cool Doggo</td>
+			<td>13</td>
+			<td>4</td>
+			<td>8</td>
+			<td>7</td>
+			<td>1</td>
+		</tbody>
+		</tr>
+		<tr>
+		<tbody>
+			<td>Andrews</td>
+			<td>19</td>
+			<td>2</td>
+			<td>10</td>
+			<td>11</td>
+			<td>0</td>
+		</tbody>
+		</tr>
+		<tr>
+		<tbody>
+			<td>Strawberry</td>
+			<td>2</td>
+			<td>9</td>
+			<td>3</td>
+			<td>5</td>
+			<td>1</td>
+		</tbody>
+		</tr>
+	</table>
 
         
 </body>
